WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
315233
REGRESSION(
306058@main
): Images on OpenTable search appear but they disappear quickly
https://bugs.webkit.org/show_bug.cgi?id=315233
Summary
REGRESSION(306058@main): Images on OpenTable search appear but they disappear...
Said Abou-Hallawa
Reported
2026-05-20 14:51:48 PDT
Open the following page:
https://www.opentable.com/s?dateTime=2026-05-04%2018%3A30&covers=2&latitude=37.2821&longitude=-121.831&term=dinner&shouldUseLatLongSearch=true&originCorrelationId=edd91d1c-7ec8-4de9-bc00-17bc62a6526b&corrid=1cc62d84-c886-4994-86af-018decc85020&metroId=4&originalTerm=dinner&queryUnderstandingType=dateTime&showMap=true&sortBy=web_conversion
Result:Images in this page appear but they disappear quickly Note: The bug does not happen if `GraphicsContext Filter Rendering` feature is disabled.
Attachments
Add attachment
proposed patch, testcase, etc.
Said Abou-Hallawa
Comment 1
2026-05-20 14:51:58 PDT
rdar://176275269
Said Abou-Hallawa
Comment 2
2026-05-20 15:38:09 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/65331
EWS
Comment 3
2026-05-21 02:03:13 PDT
Committed
313656@main
(1f2316e74833): <
https://commits.webkit.org/313656@main
> Reviewed commits have been landed. Closing PR #65331 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug