REGRESSION(306058@main): Images on OpenTable search appear but they disappear quickly https://bugs.webkit.org/show_bug.cgi?id=315233 rdar://176275269

Reviewed by Simon Fraser and Vitor Roriz.

Manually revert 306058@main since it caused images to disappear if CoreGraphics
filters are applied.

* LayoutTests/imported/w3c/web-platform-tests/css/filter-effects/css-filters-animation-opacity.html:
* Source/WebCore/platform/graphics/TransparencyLayerContextSwitcher.cpp:
(WebCore::TransparencyLayerContextSwitcher::beginClipAndDrawSourceImage):
(WebCore::TransparencyLayerContextSwitcher::beginDrawSourceImage):
(WebCore::TransparencyLayerContextSwitcher::endDrawSourceImage):
* Source/WebCore/platform/graphics/TransparencyLayerContextSwitcher.h:

Canonical link: https://commits.webkit.org/313656@main