Source/WebCore/platform/graphics/TransparencyLayerContextSwitcher.cpp
@@ -44,14 +44,14 @@ TransparencyLayerContextSwitcher::TransparencyLayerContextSwitcher(GraphicsConte
 
 void TransparencyLayerContextSwitcher::beginClipAndDrawSourceImage(GraphicsContext& destinationContext, const FloatRect&, const FloatRect& clipRect, NOESCAPE const Function<void(GraphicsContext&)>& applyAdditionalDestinationClip)
 {
+    destinationContext.save();
+
     // Workaround for a CG accelerated-drawing bug rdar://177036180: CGStyle filters fail if there's a
     // non-rectangular clip, so apply the rounded clip in its own wrapping transparency layer.
-    if (applyAdditionalDestinationClip) {
-        destinationContext.save();
+    if (applyAdditionalDestinationClip)
         applyAdditionalDestinationClip(destinationContext);
-        destinationContext.beginTransparencyLayer(1);
-        m_beganOuterClipLayer = true;
-    }
+
+    destinationContext.beginTransparencyLayer(1);
 
     for (auto& filterStyle : m_filterStyles) {
         destinationContext.save();
@@ -63,10 +63,8 @@ void TransparencyLayerContextSwitcher::beginClipAndDrawSourceImage(GraphicsConte
 
 void TransparencyLayerContextSwitcher::beginDrawSourceImage(GraphicsContext& destinationContext, float opacity)
 {
-    if (opacity != 1) {
-        destinationContext.beginTransparencyLayer(opacity);
-        m_beganOpacityLayer = true;
-    }
+    destinationContext.save();
+    destinationContext.beginTransparencyLayer(opacity);
 
     for (auto& filterStyle : m_filterStyles) {
         destinationContext.save();
@@ -83,16 +81,8 @@ void TransparencyLayerContextSwitcher::endDrawSourceImage(GraphicsContext& desti
         destinationContext.restore();
     }
 
-    if (m_beganOuterClipLayer) {
-        destinationContext.endTransparencyLayer();
-        destinationContext.restore();
-        m_beganOuterClipLayer = false;
-    }
-
-    if (m_beganOpacityLayer) {
-        destinationContext.endTransparencyLayer();
-        m_beganOpacityLayer = false;
-    }
+    destinationContext.endTransparencyLayer();
+    destinationContext.restore();
 }
 
 } // namespace WebCore
