Source/WebCore/platform/graphics/TransparencyLayerContextSwitcher.h
@@ -44,8 +44,6 @@ private:
     void endDrawSourceImage(GraphicsContext& destinationContext, const DestinationColorSpace&) override;
 
     FilterStyleVector m_filterStyles;
-    bool m_beganOpacityLayer { false };
-    bool m_beganOuterClipLayer { false };
 };
 
 } // namespace WebCore
